--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext{
+        kotlin_version = '1.3.31'
+        gradle_plugin = '3.4.1'
+    }
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath "com.android.tools.build:gradle:$gradle_plugin"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,4 +32,16 @@ task clean(type: Delete) {
 
 ext {
     androidX = '1.0.0'
+
+    lifecycle = '2.0.0'
+    ok_http = '3.14.0'
+    retrofit = '2.5.0'
+    gson = '2.8.5'
+
+    rx_java = '2.2.8'
+    rx_android = '2.1.1'
+    rx_kotlin = '2.3.0'
+
+    dagger = '2.22.1'
+    glide = '4.9.0'
 }
